[package]
name = "tokio-ecosystem-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
async-stream = "0.3.2"
bytes = "1.1.0"
futures = "0.3.21"
tokio = { version = "1.16.1", features = ["full"] }
tokio-util = { version = "0.7.0", features = ["io"] }
tokio-stream = { version = "0.1.8", features = ["fs", "sync"] }

[dev-dependencies]
criterion = { version = "0.3.5", features = ["async", "async_futures"] }

[[bench]]
name = "copy_or_loop"
harness = false
